# LA_hr

./: .gitignore  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: tests.yml
src/hr/: cli.py  inventory.py  users.py
tests/: test_cli.py  test_inventory.py  test_users.py  testfile.json
